--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,22 +1,14 @@
 .App {
-  text-align: center;
+  margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
+table {
+  border-collapse: collapse;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+th, td {
+  border: 1px solid;
+  padding: 4px;
 }
 
-.App-link {
-  color: #09d3ac;
-}
+/* vim: set ts=2 sw=2 vts=2 sta sts=2 sr et ai: */
