--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -4,11 +4,15 @@ html, body {
 
 .App {
   margin: 20px;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 .greeting {
   margin-bottom: 15px;
+}
+
+.inventoryHeader {
+  margin: 30px 0 10px 0;
 }
 
 .countNumber {
