--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -15,6 +15,12 @@ html, body {
   text-align: center;
 }
 
+.inventorySubheader {
+  margin: 5px 0;
+  text-align: center;
+  font-weight: normal;
+}
+
 .showButton {
   border: 1px solid lightgray;
   border-radius: 2px;
