Added small version of inventory grid for inventories with less than 4 items

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -35,6 +35,10 @@ html, body {
   margin-bottom: 20px;
 }
 
+.inventoryGridSmall {
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .item {
   margin: 20px 0;
   text-align: center;
