Made buttons blue and circular and pretty instead of square and grey

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -54,6 +54,9 @@ html, body {
 .countButton {
   width: 70px;
   height: 70px;
+  border-radius: 50%;
+  color: white;
+  background-color: blue;
 }
 
 table {
