Set border of count buttons to none in CSS

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -55,6 +55,7 @@ html, body {
   width: 70px;
   height: 70px;
   border-radius: 50%;
+  border: none;
   color: white;
   background-color: blue;
 }
