--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -25,9 +25,9 @@ html, body {
   height: 24px;
   line-height: 22px;
   margin: 5px;
-  border: 1px solid lightgray;
+  border: 1px solid darkgray;
   border-radius: 2px;
-  color: lightgray;
+  color: darkgray;
   background-color: white;
 }
 
