--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -31,6 +31,10 @@ html, body {
   background-color: white;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .inventoryGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
